; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_get_class.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/java/extr_mupdf_native.c_get_class.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 (%struct.TYPE_6__**, i32*)*, i32* (%struct.TYPE_6__**, i32*)*, i32* (%struct.TYPE_6__**, i8*)* }

@current_class_name = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [24 x i8] c"Failed to find class %s\00", align 1
@current_class = common dso_local global i32* null, align 8
@.str.1 = private unnamed_addr constant [33 x i8] c"Failed to make global ref for %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, %struct.TYPE_6__**, i8*)* @get_class to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_class(i32* %0, %struct.TYPE_6__** %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_6__**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.TYPE_6__** %1, %struct.TYPE_6__*** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %51

13:                                               ; preds = %3
  %14 = load i8*, i8** %7, align 8
  store i8* %14, i8** @current_class_name, align 8
  %15 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 2
  %18 = load i32* (%struct.TYPE_6__**, i8*)*, i32* (%struct.TYPE_6__**, i8*)** %17, align 8
  %19 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %20 = load i8*, i8** %7, align 8
  %21 = call i32* %18(%struct.TYPE_6__** %19, i8* %20)
  store i32* %21, i32** %8, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = icmp ne i32* %22, null
  br i1 %23, label %28, label %24

24:                                               ; preds = %13
  %25 = load i8*, i8** %7, align 8
  %26 = call i32 @LOGI(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8* %25)
  %27 = load i32*, i32** %5, align 8
  store i32 1, i32* %27, align 4
  store i32* null, i32** %4, align 8
  br label %51

28:                                               ; preds = %13
  %29 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 1
  %32 = load i32* (%struct.TYPE_6__**, i32*)*, i32* (%struct.TYPE_6__**, i32*)** %31, align 8
  %33 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %34 = load i32*, i32** %8, align 8
  %35 = call i32* %32(%struct.TYPE_6__** %33, i32* %34)
  store i32* %35, i32** @current_class, align 8
  %36 = load i32*, i32** @current_class, align 8
  %37 = icmp ne i32* %36, null
  br i1 %37, label %42, label %38

38:                                               ; preds = %28
  %39 = load i8*, i8** %7, align 8
  %40 = call i32 @LOGI(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i8* %39)
  %41 = load i32*, i32** %5, align 8
  store i32 1, i32* %41, align 4
  store i32* null, i32** %4, align 8
  br label %51

42:                                               ; preds = %28
  %43 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %44 = load %struct.TYPE_6__*, %struct.TYPE_6__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %44, i32 0, i32 0
  %46 = load i32 (%struct.TYPE_6__**, i32*)*, i32 (%struct.TYPE_6__**, i32*)** %45, align 8
  %47 = load %struct.TYPE_6__**, %struct.TYPE_6__*** %6, align 8
  %48 = load i32*, i32** %8, align 8
  %49 = call i32 %46(%struct.TYPE_6__** %47, i32* %48)
  %50 = load i32*, i32** @current_class, align 8
  store i32* %50, i32** %4, align 8
  br label %51

51:                                               ; preds = %42, %38, %24, %12
  %52 = load i32*, i32** %4, align 8
  ret i32* %52
}

declare dso_local i32 @LOGI(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
